# disk-usage-analyzer-cli

./: .gitignore  BUILD.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE-APACHE  OPTIMIZATION_SUMMARY.md  README.md  RELEASE_NOTES.md  RELEASING.md  TODO.md  benchmark-results.txt  build.rs  myspec.md  rustfmt.toml
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
hooks/: pre-commit
scripts/: benchmark.sh  coverage.sh
specs/001-disk-usage-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-disk-usage-cli/checklists/: requirements.md
specs/001-disk-usage-cli/contracts/: openapi.yaml
specs/001-disk-usage-cli/memos/: preview-logic.md
specs/001-optimize-traversal/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-optimize-traversal/contracts/: openapi.yaml
specs/002-optimization-improvements/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-optimization-improvements/checklists/: requirements.md
specs/003-optimize-traversal/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-optimize-traversal/checklists/: requirements.md
src/: lib.rs
src/cli/: args.rs  mod.rs  output.rs
src/io/: mod.rs  snapshot.rs
src/models/: mod.rs
src/services/: aggregate.rs  format.rs  mod.rs  size.rs  traverse.rs
src/services/sink/: memory.rs  mod.rs  parquet.rs
src/services/traverse/: detect.rs  legacy.rs  mod.rs  posix.rs  progress.rs  strategy.rs  windows.rs
tests/: integration_tests.rs
tests/contract/: mod.rs  test_json_shape.rs  test_snapshot_json.rs
tests/fixtures/: mod.rs
tests/integration/: mod.rs  test_drill.rs  test_errors.rs  test_perf_smoke.rs  test_resilience.rs  test_scan.rs  test_snapshot_errors.rs  test_snapshot_roundtrip.rs  test_view_drill_down.rs
tests/unit/: aggregate_tests.rs  cli_args_tests.rs  depth_tests.rs  mod.rs  normalize_path_tests.rs  traverse_tests.rs
