[package]
name = "dua"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dua"
path = "src/bin/dua.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Parquet with minimal features for binary size optimization
# - arrow: Required for Arrow integration (core functionality)
# - snap: Snappy compression (lightweight, keeps snapshots small)
# - Disabled: async, brotli, flate2, lz4, zstd (unused, saves ~1-1.5MB)
parquet = { version = "53.2", default-features = false, features = ["arrow", "snap"] }
arrow-array = "53.4"
arrow-schema = "53.4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }

[dev-dependencies]
tempfile = "3.14"

# Release profile optimized for binary size
[profile.release]
opt-level = "s"        # Optimize for size (balanced size/speed)
lto = "fat"            # Link-time optimization (maximum)
codegen-units = 1      # Single codegen unit for better cross-crate optimization
strip = true           # Strip debug symbols
