[package]
name = "dua"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Fast command-line tool to analyze disk usage and find space hogs"
repository = "https://github.com/fukasawah/dua"
authors = ["fukasawah"]
keywords = ["disk", "usage", "analyzer", "cli", "filesystem"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "dua"
path = "src/bin/dua.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Parquet with minimal features for binary size optimization
# - arrow: Required for Arrow integration (core functionality)
# - snap: Snappy compression (lightweight, keeps snapshots small)
# - Disabled: async, brotli, flate2, lz4, zstd (unused, saves ~1-1.5MB)
parquet = { version = "53.2", default-features = false, features = ["arrow", "snap"] }
arrow-array = "53.4"
arrow-schema = "53.4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }

[dev-dependencies]
tempfile = "3.14"

# Release profile optimized for binary size
[profile.release]
opt-level = "z"        # Optimize for size (aggressive) - faster build & smaller binary than "s"
lto = "fat"            # Link-time optimization (maximum)
codegen-units = 1      # Single codegen unit for better cross-crate optimization
strip = true           # Strip debug symbols
panic = "abort"        # Abort on panic (reduces unwinding code)
